# casper-build-day

./: .env.example  .gitignore  AGENTS.md  BASELINE_V1.md  BASELINE_V2.md  README.md
agent/: pyproject.toml
agent/src/agent/: __main__.py  prompt.py
api/: pyproject.toml
core/: pyproject.toml
core/src/core/: __init__.py  frame.py  practice.py  stream.py
